--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -21,6 +21,9 @@
   <body>
     <!-- groups-->
     <!--include ../blocks/groups.pug-->
+    <div class="icon-events" style="color: #000 !important;"></div>
+    <div class="icon-events" style="color: #000 !important;"></div>
+    <p>123</p>
     <!-- scripts-->
     <script src="../js/jquery-3.2.1.min.js"></script>
     <script src="../js/jquery.bpopup.min.js"></script>
