added svg icon fonts

--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -23,6 +23,8 @@
     <!--include ../blocks/groups.pug-->
     <div class="icon-events" style="color: #000 !important;"></div>
     <div class="icon-events" style="color: #000 !important;"></div>
+    <div class="icon-arrow"></div>
+    <div class="icon icon-events"></div>
     <p>123</p>
     <!-- scripts-->
     <script src="../js/jquery-3.2.1.min.js"></script>
