--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -9,7 +9,7 @@
     <!--link(rel="icon" type="image/png" href="../img/favicons/32x32.png" sizes="32x32")-->
     <!--link(rel="icon" type="image/png" href="../img/favicons/96x96.png" sizes="96x96")-->
     <title>Page</title>
-    <link rel="stylesheet" href="../styles/bootstrap.css">
+    <!--link(rel='stylesheet', href='../styles/bootstrap.css')-->
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries-->
@@ -19,15 +19,48 @@
     <!--script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')-->
   </head>
   <body>
-    <!-- groups-->
-    <!--include ../blocks/groups.pug-->
-    <div class="icon-events" style="color: #000 !important;"></div>
-    <div class="icon-events" style="color: #000 !important;"></div>
-    <div class="icon-arrow"></div>
-    <div class="icon icon-events"></div>
-    <p>123</p>
+    <!-- main slider-->
+    <div class="main-slider">
+      <!-- main slider container-->
+      <div class="scroll-down-container">
+        <div class="container">
+          <!-- scroll down-->
+          <div class="scroll-down"><span></span>
+            <p>Scroll down</p>
+          </div>
+        </div>
+      </div>
+      <ul class="main-slider__container">
+        <!-- item-->
+        <li>
+          <!-- mask-->
+          <div class="main-slider__container__mask">
+            <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
+            <p>We forge connections between brand and people.</p>
+          </div><img src="../img/slide-1.jpg" alt="@@">
+        </li>
+        <!-- item-->
+        <li>
+          <!-- mask-->
+          <div class="main-slider__container__mask">
+            <h2>Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem</h2>
+            <p>Description</p>
+          </div><img src="../img/slide-1.jpg" alt="@@">
+        </li>
+        <!-- item-->
+        <li>
+          <!-- mask-->
+          <div class="main-slider__container__mask">
+            <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
+            <p>We forge connections between brand and people.</p>
+          </div><img src="../img/slide-1.jpg" alt="@@">
+        </li>
+      </ul>
+    </div>
+    <!-- /main slider-->
     <!-- scripts-->
     <script src="../js/jquery-3.2.1.min.js"></script>
+    <script src="../js/responsiveslides.min.js"></script>
     <script src="../js/jquery.bpopup.min.js"></script>
     <script src="../js/scripts.js"></script>
     <!-- / scripts-->
