fixed main slider, header

--- a/dev/blocks/main-slider/main-slider.html
+++ b/dev/blocks/main-slider/main-slider.html
@@ -1,6 +1,5 @@
 
 <div class="main-slider">
-  <!-- main slider container-->
   <div class="scroll-down-container">
     <div class="container">
       <!-- scroll down-->
@@ -9,30 +8,33 @@
       </div>
     </div>
   </div>
-  <ul class="main-slider__container">
-    <!-- item-->
-    <li>
-      <!-- mask-->
-      <div class="main-slider__container__mask">
-        <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
-        <p>We forge connections between brand and people.</p>
-      </div><img src="../img/slide-1.jpg" alt="@@"/>
-    </li>
-    <!-- item-->
-    <li>
-      <!-- mask-->
-      <div class="main-slider__container__mask">
-        <h2>Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem</h2>
-        <p>Description</p>
-      </div><img src="../img/slide-1.jpg" alt="@@"/>
-    </li>
-    <!-- item-->
-    <li>
-      <!-- mask-->
-      <div class="main-slider__container__mask">
-        <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
-        <p>We forge connections between brand and people.</p>
-      </div><img src="../img/slide-1.jpg" alt="@@"/>
-    </li>
-  </ul>
+  <!-- main slider container-->
+  <div class="container">
+    <ul class="main-slider__container">
+      <!-- item-->
+      <li>
+        <!-- mask-->
+        <div class="main-slider__container__mask">
+          <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
+          <p>We forge connections between brand and people.</p>
+        </div>
+      </li>
+      <!-- item-->
+      <li>
+        <!-- mask-->
+        <div class="main-slider__container__mask">
+          <h2>Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem</h2>
+          <p>Description</p>
+        </div>
+      </li>
+      <!-- item-->
+      <li>
+        <!-- mask-->
+        <div class="main-slider__container__mask">
+          <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
+          <p>We forge connections between brand and people.</p>
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
