--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -19,9 +19,34 @@
     <!--script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')-->
   </head>
   <body>
+    <!-- header-->
+    <header class="header">
+      <!-- container-->
+      <div class="container">
+        <!-- logo space-->
+        <div class="header__logo-space">
+          <!-- logotype--><a class="logo header__logo" href="#" title=""><img src="../img/logo.png" alt="@@"></a>
+        </div>
+        <!-- nav space-->
+        <div class="header__nav-space">
+          <!-- navigation-->
+          <nav class="header__nav">
+            <ul>
+              <li><a href="#" title="">Home</a></li>
+              <li><a href="#" title="">Services</a></li>
+              <li><a href="#" title="">Cases</a></li>
+              <li><a href="#" title="">News</a></li>
+              <li><a href="#" title="">About us</a></li>
+              <li><a href="#" title="">Jobs</a></li>
+              <li><a href="#" title="">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <!-- /header-->
     <!-- main slider-->
     <div class="main-slider">
-      <!-- main slider container-->
       <div class="scroll-down-container">
         <div class="container">
           <!-- scroll down-->
@@ -30,34 +55,38 @@
           </div>
         </div>
       </div>
-      <ul class="main-slider__container">
-        <!-- item-->
-        <li>
-          <!-- mask-->
-          <div class="main-slider__container__mask">
-            <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
-            <p>We forge connections between brand and people.</p>
-          </div><img src="../img/slide-1.jpg" alt="@@">
-        </li>
-        <!-- item-->
-        <li>
-          <!-- mask-->
-          <div class="main-slider__container__mask">
-            <h2>Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem</h2>
-            <p>Description</p>
-          </div><img src="../img/slide-1.jpg" alt="@@">
-        </li>
-        <!-- item-->
-        <li>
-          <!-- mask-->
-          <div class="main-slider__container__mask">
-            <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
-            <p>We forge connections between brand and people.</p>
-          </div><img src="../img/slide-1.jpg" alt="@@">
-        </li>
-      </ul>
+      <!-- main slider container-->
+      <div class="container">
+        <ul class="main-slider__container">
+          <!-- item-->
+          <li>
+            <!-- mask-->
+            <div class="main-slider__container__mask">
+              <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
+              <p>We forge connections between brand and people.</p>
+            </div>
+          </li>
+          <!-- item-->
+          <li>
+            <!-- mask-->
+            <div class="main-slider__container__mask">
+              <h2>Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem</h2>
+              <p>Description</p>
+            </div>
+          </li>
+          <!-- item-->
+          <li>
+            <!-- mask-->
+            <div class="main-slider__container__mask">
+              <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
+              <p>We forge connections between brand and people.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
     <!-- /main slider-->
+    <div class="container" style="height: 90vh;"></div>
     <!-- scripts-->
     <script src="../js/jquery-3.2.1.min.js"></script>
     <script src="../js/responsiveslides.min.js"></script>
