fixed main slider

--- a/dev/blocks/header/header.html
+++ b/dev/blocks/header/header.html
@@ -8,18 +8,21 @@
     </div>
     <!-- nav space-->
     <div class="header__nav-space">
-      <!-- navigation-->
-      <nav class="header__nav">
-        <ul>
-          <li><a href="#" title="">Home</a></li>
-          <li><a href="#" title="">Services</a></li>
-          <li><a href="#" title="">Cases</a></li>
-          <li><a href="#" title="">News</a></li>
-          <li><a href="#" title="">About us</a></li>
-          <li><a href="#" title="">Jobs</a></li>
-          <li><a href="#" title="">Contact</a></li>
-        </ul>
-      </nav>
+      <!-- nav btn space-->
+      <div class="header__nav-button-space">
+        <!-- navigation-->
+        <nav class="header__nav">
+          <ul>
+            <li><a href="#" title="">Home</a></li>
+            <li><a href="#" title="">Services</a></li>
+            <li><a href="#" title="">Cases</a></li>
+            <li><a href="#" title="">News</a></li>
+            <li><a href="#" title="">About us</a></li>
+            <li><a href="#" title="">Jobs</a></li>
+            <li><a href="#" title="">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </div>
 </header>
