--- a/dev/blocks/header/header.html
+++ b/dev/blocks/header/header.html
@@ -10,10 +10,11 @@
     <div class="header__nav-space">
       <!-- nav btn space-->
       <div class="header__nav-button-space">
+        <!-- button--><a class="button button-grey header__nav-button-space__promo" href="#" title=""></a>
         <!-- navigation-->
         <nav class="header__nav">
           <ul>
-            <li><a href="#" title="">Home</a></li>
+            <li><a class="nav-active" href="#" title="">Home</a></li>
             <li><a href="#" title="">Services</a></li>
             <li><a href="#" title="">Cases</a></li>
             <li><a href="#" title="">News</a></li>
