--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -31,10 +31,11 @@
         <div class="header__nav-space">
           <!-- nav btn space-->
           <div class="header__nav-button-space">
+            <!-- button--><a class="button button-grey header__nav-button-space__promo" href="#" title=""></a>
             <!-- navigation-->
             <nav class="header__nav">
               <ul>
-                <li><a href="#" title="">Home</a></li>
+                <li><a class="nav-active" href="#" title="">Home</a></li>
                 <li><a href="#" title="">Services</a></li>
                 <li><a href="#" title="">Cases</a></li>
                 <li><a href="#" title="">News</a></li>
@@ -73,16 +74,16 @@
           <li>
             <!-- mask-->
             <div class="main-slider__container__mask">
-              <h2>Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem</h2>
-              <p>Description</p>
+              <h2>Lorem ipsum dolor sit amet,<br/>consectetur adipiscing</br>elit</h2>
+              <p>Donec vestibulum enim ac eros luctus scelerisque.</p>
             </div>
           </li>
           <!-- item-->
           <li>
             <!-- mask-->
             <div class="main-slider__container__mask">
-              <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
-              <p>We forge connections between brand and people.</p>
+              <h2>Curabitur<br/>tincidunt rutrum<br/>libero</h2>
+              <p>Suspendisse ut consectetur sapien.</p>
             </div>
           </li>
         </ul>
