--- a/dev/blocks/main-slider/main-slider.html
+++ b/dev/blocks/main-slider/main-slider.html
@@ -23,16 +23,16 @@
       <li>
         <!-- mask-->
         <div class="main-slider__container__mask">
-          <h2>Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem</h2>
-          <p>Description</p>
+          <h2>Lorem ipsum dolor sit amet,<br/>consectetur adipiscing</br>elit</h2>
+          <p>Donec vestibulum enim ac eros luctus scelerisque.</p>
         </div>
       </li>
       <!-- item-->
       <li>
         <!-- mask-->
         <div class="main-slider__container__mask">
-          <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
-          <p>We forge connections between brand and people.</p>
+          <h2>Curabitur<br/>tincidunt rutrum<br/>libero</h2>
+          <p>Suspendisse ut consectetur sapien.</p>
         </div>
       </li>
     </ul>
