added animated scroll down element

--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -54,8 +54,10 @@
       <div class="scroll-down-container">
         <div class="container">
           <!-- scroll down-->
-          <div class="scroll-down"><span></span>
-            <p>Scroll down</p>
+          <div class="scroll-down">
+            <div class="scroll-down__element scroll-down_animated"><span></span>
+              <p>Scroll down</p>
+            </div>
           </div>
         </div>
       </div>
