--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -95,6 +95,7 @@
     <div class="container" style="height: 90vh;"></div>
     <!-- scripts-->
     <script src="../js/jquery-3.2.1.min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
     <script src="../js/responsiveslides.min.js"></script>
     <script src="../js/jquery.bpopup.min.js"></script>
     <script src="../js/scripts.js"></script>
