--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -179,7 +179,8 @@
               <!-- content-->
               <div class="services-items__content">
                 <h4>Foodtruck</h4>
-                <div class="icon icon-foodtruck"></div><a href="#" title="">Read more</a>
+                <div class="icon icon-foodtruck"></div>
+                <p>Great way to engage with your<br/><span>audience in a fresh and foodie</span></p>
               </div>
             </div>
             <!-- item-->
