fixed services, added button close

--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -96,6 +96,8 @@
     <div class="services">
       <!-- container-->
       <div class="container service-middle">
+        <!-- button close--><a class="btn-close" href="#" title="">
+          <div class="icon icon-plus"></div></a>
         <!-- title block-->
         <h3 class="title-block">Services</h3>
         <!-- description block-->
