--- a/dev/blocks/services/services.html
+++ b/dev/blocks/services/services.html
@@ -2,6 +2,8 @@
 <div class="services">
   <!-- container-->
   <div class="container service-middle">
+    <!-- button close--><a class="btn-close" href="#" title="">
+      <div class="icon icon-plus"></div></a>
     <!-- title block-->
     <h3 class="title-block">Services</h3>
     <!-- description block-->
