fixed index page, added animatation for elements

--- a/dev/blocks/main-slider/main-slider.html
+++ b/dev/blocks/main-slider/main-slider.html
@@ -17,8 +17,8 @@
       <li>
         <!-- mask-->
         <div class="main-slider__container__mask">
-          <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
-          <p>We forge connections between brand and people.</p>
+          <h2 class="wow fadeIn">WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
+          <p class="wow fadeIn" data-wow-delay="1s">We forge connections between brand and people.</p>
         </div>
       </li>
       <!-- item-->
