--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -8,9 +8,10 @@
     <!--link(rel="icon" type="image/png" href="../img/favicons/16x16.png" sizes="16x16")-->
     <!--link(rel="icon" type="image/png" href="../img/favicons/32x32.png" sizes="32x32")-->
     <!--link(rel="icon" type="image/png" href="../img/favicons/96x96.png" sizes="96x96")-->
-    <title>Page</title>
+    <title>Test task for Mindesign</title>
     <!--link(rel='stylesheet', href='../styles/bootstrap.css')-->
     <link rel="stylesheet" href="../styles/normalize.css">
+    <link rel="stylesheet" href="../styles/animate.css">
     <link rel="stylesheet" href="../styles/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries-->
     <!-- WARNING: Respond.js doesn't work if you view the page via file://-->
@@ -68,8 +69,8 @@
           <li>
             <!-- mask-->
             <div class="main-slider__container__mask">
-              <h2>WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
-              <p>We forge connections between brand and people.</p>
+              <h2 class="wow fadeIn">WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES</h2>
+              <p class="wow fadeIn" data-wow-delay="1s">We forge connections between brand and people.</p>
             </div>
           </li>
           <!-- item-->
@@ -107,7 +108,7 @@
           <!-- column-->
           <div class="services-items__column">
             <!-- item-->
-            <div class="services-items__column__item services-items__one services-items__column__item_active">
+            <div class="services-items__column__item services-items__one services-items__column__item_active wow fadeIn">
               <!-- content-->
               <div class="services-items__content">
                 <h4>Foodtruck</h4>
@@ -118,7 +119,7 @@
           <!-- column-->
           <div class="services-items__column">
             <!-- item-->
-            <div class="services-items__column__item">
+            <div class="services-items__column__item wow fadeIn" data-wow-delay="0.5s">
               <!-- content-->
               <div class="services-items__content">
                 <h4>MERCHANDISING</h4>
@@ -127,7 +128,7 @@
               </div>
             </div>
             <!-- item-->
-            <div class="services-items__column__item services-items__two">
+            <div class="services-items__column__item services-items__two wow fadeIn" data-wow-delay="1s">
               <!-- content-->
               <div class="services-items__content">
                 <h4>In store <br/> <span>activation</span></h4>
@@ -139,7 +140,7 @@
           <!-- column-->
           <div class="services-items__column">
             <!-- item-->
-            <div class="services-items__column__item services-items__three more">
+            <div class="services-items__column__item services-items__three more wow fadeIn" data-wow-delay="1.5s">
               <!-- content-->
               <div class="services-items__content">
                 <h4>View more <br/> <span>services</span></h4>
@@ -272,6 +273,7 @@
     <script src="../js/jquery-3.2.1.min.js"></script>
     <script src="../js/responsiveslides.min.js"></script>
     <script src="../js/jquery.bpopup.min.js"></script>
+    <script src="../js/wow.min.js"></script>
     <script src="../js/scripts.js"></script>
     <!-- / scripts-->
   </body>
