--- a/dev/blocks/services/services.html
+++ b/dev/blocks/services/services.html
@@ -13,7 +13,7 @@
       <!-- column-->
       <div class="services-items__column">
         <!-- item-->
-        <div class="services-items__column__item services-items__one services-items__column__item_active">
+        <div class="services-items__column__item services-items__one services-items__column__item_active wow fadeIn">
           <!-- content-->
           <div class="services-items__content">
             <h4>Foodtruck</h4>
@@ -24,7 +24,7 @@
       <!-- column-->
       <div class="services-items__column">
         <!-- item-->
-        <div class="services-items__column__item">
+        <div class="services-items__column__item wow fadeIn" data-wow-delay="0.5s">
           <!-- content-->
           <div class="services-items__content">
             <h4>MERCHANDISING</h4>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <!-- item-->
-        <div class="services-items__column__item services-items__two">
+        <div class="services-items__column__item services-items__two wow fadeIn" data-wow-delay="1s">
           <!-- content-->
           <div class="services-items__content">
             <h4>In store <br/> <span>activation</span></h4>
@@ -45,7 +45,7 @@
       <!-- column-->
       <div class="services-items__column">
         <!-- item-->
-        <div class="services-items__column__item services-items__three more">
+        <div class="services-items__column__item services-items__three more wow fadeIn" data-wow-delay="1.5s">
           <!-- content-->
           <div class="services-items__content">
             <h4>View more <br/> <span>services</span></h4>
